[package]
name = "progression"
version = "0.1.0"
authors = ["Christopher Chalmers <c.chalmers@me.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.4", features = ["thread-pool"]}
futures-timer = "3.0.2"
term_size = "0.3.1"

[dev-dependencies]
async-fetcher = { git = "https://github.com/pop-os/async-fetcher" }
surf = { git = "https://github.com/http-rs/surf" }
hyper = "0.13.4"
tokio = {version = "0.2.17", features = ["fs", "macros"]}
ctrlc = "3.1.4"
termios = "0.3.2"
nix = "0.17.0"
lazy_static = "1.4.0"
