[package]
name = "progression"
version = "0.1.0"
authors = ["Christopher Chalmers <c.chalmers@me.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.4", features = ["thread-pool"]}
futures-timer = "3.0.2"
term_size = "0.3.1"
bitfield = "0.13.2"
sha2 = "0.8.1"
sodiumoxide = "0.2.5"
blake3 = "0.3.3"

[dev-dependencies]
async-fetcher = { git = "https://github.com/pop-os/async-fetcher" }
surf = { git = "https://github.com/http-rs/surf" }
hyper = "0.13.4"
tokio = {version = "0.2.17", features = ["fs", "macros"]}
ctrlc = "3.1.4"
termios = "0.3.2"
nix = "0.17.0"
lazy_static = "1.4.0"
twox-hash = "1.5.0"
structopt = "0.3.14"
jwalk = "0.5.1"
rayon = "1.3.0"
walkdir = "2.3.1"
ignore = "0.4.14"
